# GeckBot

./: Cargo.toml
python/: gecko.py  requirements.txt  sheet_updater.py
src/: main.rs
