[package]
name = "geckobot"
version = "0.1.0"
authors = ["oren <oren@cynerio.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
futures = { version = "0.3.*" }
tokio = {version = "1.*", features = ["full"] }